# zero2prod

./: .env  Cargo.toml  Dockerfile  schema.lol  spec.yaml
.github/workflows/: general.yml
infrastructure/: provider.tf  terraform.tfstate
scripts/: init_db.sh  run_checks.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: check_health.rs
