[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.8.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
config = "0.14.0"
uuid = { version = "1.9.1", features = ["v4"] }
chrono = { version = "0.4.38", features = ["clock"] }
log = "0.4.22"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-actix-web = "0.7.11"
tracing-log = "0.2.0"
serde-aux = "4.5.0"
secrecy = { version = "0.8.0", features = ["serde"] }

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.5"
